syntax = "proto3";
package irismod.token;

import "gogoproto/gogo.proto";
import "irismod/token/token.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/irisnet/irismod/modules/token/types";

// GenesisState defines the token module's genesis state
message GenesisState {
    Params params = 1 [ (gogoproto.nullable) = false ];
    repeated Token tokens = 2 [ (gogoproto.nullable) = false ];
    repeated cosmos.base.v1beta1.Coin burned_coins = 3
        [ (gogoproto.nullable) = false ];
}
